@@ -1,3 +1,9 @@
+2012-02-23  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
+
+	* config/ia64/crtbegin.S: Use HAVE_INITFINI_ARRAY_SUPPORT
+	instead of HAVE_INITFINI_ARRAY.
+	* config/ia64/crtend.S: Likewise.
+
 2012-02-20  Kai Tietz  <ktietz@redhat.com>
 
 	PR libstdc++/52300
